strapi-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: strapi-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
      - name: strapi
        image: strapi/strapi
        ports:
        - containerPort: 1337
