strapi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: strapi-ingress
  #annotations:
  #  ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /strapi
          backend:
            serviceName: strapi-svc
            servicePort: 1337
